--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 #Discord rpc stuff
 /discord_game_sdk
 
+#QSimpleUpdater
+/QSimpleUpdater
+
 # Qt-es
 object_script.*.Release
 object_script.*.Debug
@@ -37,6 +40,8 @@ ui_*.h
 *.jsc
 Makefile*
 *build-*
+/release
+/debug
 
 # Qt unit tests
 target_wrapper.*
